--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -67,23 +67,112 @@ ul,li{
     display: flex;
     align-items: center;
     gap: 30px;
+    
 }
 .nav-item{
     text-transform: uppercase;
-    border: none;
+    
+
 }
 .nav-item :hover {
     background: var(--primary-clr);
     color: var(--BG-clr);
     border-radius: var(--border-rds2);
-    
 }
 .nav-link{
+    border: none;
+    text-align: center;
+    border-radius: var(--border-rds2);
     color: var(--Text-clr);
     font-size: 18px;
-    padding: 5px 12px;
+    padding: 10px 25px;
 }
 /* =========== header ends ============ */
+
+
+
+
+/* =========== footer start ============ */
+.ft__con{
+    margin: var(--margin);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--acsent-clr);
+}
+.ft__slide{
+    /* border: 1px solid black; */
+}
+.ft__slide__left{
+    width: 250px;
+    height: 400px;
+}
+.ft__slide__left img{
+    width: 100%;
+    height: 100%;
+}
+.ft__center__title h5{
+    font-size: 40px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--BG-clr);
+}
+.ft__center__list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+}
+.ft__list__item{
+    text-transform: capitalize;
+    margin: 20px 0;
+}
+.ft__list__link{
+    font-size: 22px;
+    background-color: var(--Text-clr);
+    color: var(--BG-clr);
+    border: none;
+    border-radius: 12px;
+    padding: 5px 15px;
+}
+.ft__list__link:hover{
+    background-color: var(--BG-clr);
+    color: var(--Text-clr);
+}
+.ft__list__social{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+.ft__social__div{
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.ft__social__item a i{
+    font-size: 30px;
+    background-color: var(--Text-clr);
+    color: var(--BG-clr);
+    border: none;
+    border-radius: 50%;
+    padding: 20px;
+}
+.ft__social__item a i:hover{
+    background-color: var(--BG-clr);
+    color: var(--Text-clr);
+}
+
+
+
+
+
+
+
+
+/* =========== footer ends ============ */
 
 
 
@@ -93,6 +182,7 @@ ul,li{
 
 @media screen and (max-width : 600px) {
     .navbar{
+        gap: 30px;
         flex-direction: column
     }
 
@@ -100,8 +190,27 @@ ul,li{
         flex-direction: column;
         gap: 10px;
     }
-    /* .nav-item{
+    .nav-item{
         display: none;
-    } */
+    }
+
+
+    .ft__con{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .ft__slide__left{
+        display: none;
+    }
+    .ft__slide__right{
+        width: 400px;
+        height: 400px;
+        text-align: center;
+    }
+    .ft__slide__right iframe{
+        width: 100%;
+        height: 100%;
+    }
+    
 
 }
