--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -87,6 +87,51 @@ ul,li{
     font-size: 18px;
     padding: 10px 25px;
 }
+
+.hero{
+    width: 100%;
+    height: 85vh;
+    background-image: url(/assest/image/project/laptop.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.hero__con{
+    margin: var(--margin);
+
+}
+.hero__title h1{
+    padding: 30px 0;
+    font-size: 120px;
+    font-weight: 700;
+    color: var(--BG-clr);
+    text-align: center;
+}
+.hero__sub__title h4{
+    font-size: 40px;
+    font-weight: 600;
+    color: var(--BG-clr);
+    text-align: center;
+}
+.hero__deck{
+    width: 700Px;
+    margin: 0 auto
+    
+}
+.hero__deck p{
+    margin-top: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--BG-clr);
+    text-align: center;
+}
+.button{
+    text-align: center;
+    margin-top: 50px;
+}
+.button button{
+    margin: 0 20px;
+}
 /* =========== header ends ============ */
 
 
@@ -100,9 +145,9 @@ ul,li{
     align-items: center;
     background: var(--acsent-clr);
 }
-.ft__slide{
-    /* border: 1px solid black; */
-}
+/* .ft__slide{
+    
+} */
 .ft__slide__left{
     width: 250px;
     height: 400px;
