--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -91,7 +91,7 @@ ul,li{
 .hero{
     width: 100%;
     height: 85vh;
-    background-image: url(/assest/image/project/laptop.jpg);
+    background-image: url(./assest/image/project/laptop.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
